# jsonschema-restructuredtext

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
jsonschema_restructuredtext/: __init__.py  constants.py  main.py  utils.py
jsonschema_restructuredtext/converter/: rst.py
scripts/: generate-tests.sh
tests/: model.rst  model_custom-title.rst  test_generate.py  test_generate_examples_format.py  test_schema_examples.py
tests/schema-examples/: basic-anyOf-multiple-types.md  basic-anyOf-multiple-types.rst  basic-anyOf-null.rst  integer.md  integer.rst  nested_dicts.rst  simple.rst  untyped_list.md  untyped_list.rst
