[tool.poetry]
name = "jsonschema-restructuredtext"
license = "MIT"
version = "0.0.1"
description = "Export a JSON Schema document to restructuredtext documentation."
repository = "https://github.com/FDSN/jsonschema-restructuredtext"
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Topic :: Documentation",
  "Topic :: File Formats :: JSON :: JSON Schema",
  "Topic :: Text Processing :: Markup :: reStructuredText",
  "Topic :: Utilities",
  "Topic :: Software Development :: Documentation",
]
keywords = ["jsonschema", "restructuredtext", "documentation", "docs", "json"]
packages = [{ include = "jsonschema_restructuredtext" }]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
loguru = "^0.7.2"
jsonref = "^1.1.0"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"
pytest = "^8.0.0"
pre-commit = "^3.7.0"
pydantic = "^2.6.1"
pytest-cov = "^5.0.0"

[tool.poetry.scripts]
jsonschema-restructuredtext = "jsonschema_restructuredtext.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.ignore = ["E501", "B008", "B006"]
lint.extend-select = ["B", "C4", "PIE", "T20", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T201", "PIE804", "SIM115"]
